simple_chart/templates/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canopy-ui-simple
  labels:
    app: canopy-ui-simple
spec:
  to:
    kind: Service
    name: canopy-ui-simple
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
